tests/ui/errors/snapshots/parse_error_recovery_interface.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:3]
 2 │ interface Foo {
 3 │   ^
   ·   ┬
   ·   ╰── expected `fn` or `embed`
 4 │   fn bar();
   ╰────
  help: Only method signatures (`fn`) and embeddings (`embed`) are allowed in interfaces · code: [parse.syntax_error]
