tests/ui/errors/snapshots/parse_error_recovery_lambda_missing_type.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:15]
 2 │ fn test() {
 3 │   let f = |x: | x + 1;
   ·               ┬
   ·               ╰── expected type after `:`
 4 │   let g = 5;
   ╰────
  help: Annotate the type, e.g. `x: int` · code: [parse.syntax_error]
