tests/ui/errors/snapshots/parse_error_recovery_nested_unclosed_parens.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:20]
 2 │ fn test() {
 3 │   let x = ((((1 + 2;
   ·                    ┬
   ·                    ╰── expected `,` or `)`
 4 │   let y = 5;
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
