tests/ui/errors/snapshots/parse_error_recovery_struct_def.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:3]
 3 │   x: i32,
 4 │   ^
   ·   ┬
   ·   ╰── expected field name
 5 │   y: i32,
   ╰────
  help: Field names must be identifiers · code: [parse.syntax_error]
