tests/ui/errors/snapshots/parse_error_recovery_struct_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:16]
 2 │ fn test() {
 3 │   let Point { x^ y } = p;
   ·                ┬
   ·                ╰── expected `,` or `}`
 4 │ }
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
