tests/ui/errors/snapshots/parse_error_recovery_unclosed_bracket.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:21]
 2 │ fn test() {
 3 │   let arr = [1, 2, 3;
   ·                     ┬
   ·                     ╰── expected `,` or `]`
 4 │   let y = 5;
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
