tests/ui/errors/snapshots/parse_error_recovery_unclosed_type_args.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:3]
 3 │   let x: Option<Result<Either<Box<Ref<Map<int,
 4 │   let y = 5;
   ·   ─┬─
   ·    ╰── expected `>`
 5 │ }
   ╰────
  help: Add `>` to close the type arguments · code: [parse.syntax_error]
